feat: 월간 집계 조회 구현
- 월별 합계를 원본 행에서 직접 집계. 일간 결과를 굴려 올리면 반올림된 값을 더하게 되어 회귀 기준과 어긋남
- YearMonth를 JPQL에서 만들 수 없어 연·월을 상자 타입으로 받는 생성자를 둠. 기본형이면 Hibernate가 생성자를 찾지 못할 수 있음
- 월 범위를 시작 월 1일과 종료 월 말일로 바꿔 넘겨 2월과 윤년 말일 계산을 YearMonth에 맡김
- 조회 범위 상한을 24개월로 두고 초과를 400으로 거부. 빈 월을 채우므로 상한이 없으면 응답 크기를 요청이 정함
- 데이터가 없는 월도 0으로 채우고 정렬을 채우기 단계에서 정함. 일간과 같은 이유
- 실행 계획 테스트가 테이블 통계에 의존하던 문제를 고침. 대량 삽입 직후 카디널리티 추정이 1이라 전체 스캔이 선택됨
- 월간 실행 계획은 복합 인덱스를 단언하지 않음. 연·월 그룹핑이 인덱스 정렬 이점을 없애고 월간 요청은 최소 한 달이라 비용이 동일함
- 대신 테이블을 훑지 않고 연결 식별자로 좁혀 들어가는지를 단언. 인덱스 선택은 tie-break이라 데이터 양에 따라 달라짐
- 회귀 기준 맵을 Map.copyOf로 감싸던 것을 순서 보존으로 바꿈. 내부 SALT 때문에 JVM 실행마다 순회 순서가 바뀌어 첫 항목을 쓰는 테스트가 간헐 실패함
- 일간 실행 계획의 검사 행 수가 실행마다 1066·1459·1497로 흔들리던 원인이 이것
- 날짜와 월 형식 애노테이션 5개 제거. Spring과 Jackson이 이미 yyyy-MM-dd와 yyyy-MM을 기본 처리하므로 과잉 방어였음
- 형식 보장을 애노테이션이 아니라 응답 원문 단언과 잘못된 형식 거부 테스트가 담당
- 애노테이션이 하나뿐인 파라미터를 같은 줄에 두고 닫는 괄호를 별도 줄로 옮겨 서식 규칙에 맞춤
- 떠 있던 javadoc 두 건을 각자 메서드에 붙임. Java는 선언에 가장 가까운 주석만 연결하므로 앞 주석이 조용히 사라짐
- 월간 조회 범위 상한과 yyyy-MM-dd 거부 규칙을 기능_명세에 반영
- 검증: 테스트 229건 통과, 기능 명세의 월간 기대값 8행이 실제 API 응답 원문으로 재현
- 검증: 월간 뮤테이션 5건(인덱스 미사용·빈 월 채우기 제거·상한 off-by-one·말일 대신 1일·사전 반올림) 전부 검출
- 검증: 회귀 기준 순서 보존 후 실행 계획의 검사 행 수가 3회 연속 동일